# vad-benchmark

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: text_podcast.txt
docs/: benchmark-audit.md  pipeline-flow.md  rms-vs-silero-vad-results.md  vad-benchmark-plan.md
docs/superpowers/plans/: 2026-07-08-audio-chunk-review.md  2026-07-13-jetson-telemetry-history.md  2026-07-13-task-5-review-remediation.md  2026-07-13-trustworthy-vad-benchmark.md
docs/superpowers/specs/: 2026-07-08-audio-chunk-review-design.md  2026-07-08-simple-http-auth-design.md  2026-07-08-ui-flow-and-metric-tooltips-design.md  2026-07-13-jetson-telemetry-history-design.md  2026-07-13-trustworthy-vad-benchmark-design.md
scripts/: run_benchmark.py
src/vad_bench/: __init__.py  api.py  audio.py  config.py  engine.py  manifest.py  metrics.py  paths.py  reference.py  rms_vad.py  runner.py  sysmon.py  verdict.py
tests/: test_api_history.py  test_api_run_readiness.py  test_audio.py  test_auth.py  test_config.py  test_engine.py  test_manifest.py  test_metrics.py  test_reference.py  test_rms_vad.py  test_run_benchmark.py  test_runner.py  test_sysmon.py  test_ui_contract.py  test_verdict.py
ui/: app.js  index.html  style.css
