[project]
name = "vad-benchmark"
version = "0.1.0"
description = "Standalone VAD + STT benchmark for the ai4db backend on Indonesian audio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jiwer>=3.0",
  "pydantic-settings>=2.0",
  "psutil>=5.9",          # CPU/RAM sampling for the system resource monitor
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.0"]

[project.scripts]
vad-bench-serve = "vad_bench.api:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vad_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]